<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        style="@style/AppTheme.ButtonBar">
        <!--This is the edit button row-->
        <Button
            android:id="@+id/button_cut"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/cut"
            style="@style/Widget.AppCompat.ButtonBar"/>
        <Button
            android:id="@+id/button_copy"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/copy"
            style="@style/Widget.AppCompat.ButtonBar"/>
        <Button
            android:id="@+id/button_paste"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/paste"
            style="@style/Widget.AppCompat.ButtonBar"/>
        <Button
            android:id="@+id/button_save"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/save"
            style="@style/Widget.AppCompat.ButtonBar"/>
        <Button
            android:id="@+id/button_preview"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:text="@string/preview"/>

    </LinearLayout>
    <EditText
        android:id="@+id/editText_editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:inputType="textMultiLine"
        android:hint="@string/text_here"
        android:gravity="start"/>

</LinearLayout>